@@ -1,3 +1,5 @@
 SUBDIRS = include
 
-noinst_HEADERS = plugin_common.c
+noinst_HEADERS = \
+	plugin_common.c\
+	hashtable.c
